force-app/main/default/objects/smt_Summit_Particular__c/smt_Summit_Particular__c.object-meta.xml
<CustomObject>
    <label>Summit Particular</label>
    <nameField>
        <label>Particular Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summit Particulars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>