force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Achieved__c.field-meta.xml
<CustomField>
    <fullName>smt_Achieved__c</fullName>
    <description>Tracks the achieved target.</description>
    <label>Achieved</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>