force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Actual_Percentage_Achieved__c.field-meta.xml
<CustomField>
    <fullName>smt_Actual_Percentage_Achieved__c</fullName>
    <formula>IF(
    NOT(smt_Is_Target_Applicable__c) &amp;&amp; 
    smt_Is_Evidence_Applicable__c &amp;&amp; 
    ISBLANK(smt_Evidence_To_Be_Attached__c), 
    0, 
    IF(
        NOT(smt_Is_Target_Applicable__c) &amp;&amp; 
        smt_Is_Evidence_Applicable__c &amp;&amp; 
        NOT(ISBLANK(smt_Evidence_To_Be_Attached__c)), 
        1, 
        IF(
            ISNULL(smt_Target__c) || smt_Target__c == 0, 
            0, 
            
                (smt_Achieved__c / smt_Target__c) 
            
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Percentage Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>