force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Evidence_To_Be_Attached__c.field-meta.xml
<CustomField>
    <fullName>smt_Evidence_To_Be_Attached__c</fullName>
    <label>Evidence To Be Attached</label>
    <type>Url</type>
</CustomField>