force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Is_Particular_Considered__c.field-meta.xml
<CustomField>
    <fullName>smt_Is_Particular_Considered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Particular Considered</label>
    <type>Checkbox</type>
</CustomField>