force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Is_Target_Applicable__c.field-meta.xml
<CustomField>
    <fullName>smt_Is_Target_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Target Applicable</label>
    <type>Checkbox</type>
</CustomField>