force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Percentage_Achieved__c.field-meta.xml
<CustomField>
    <fullName>smt_Percentage_Achieved__c</fullName>
    <label>Percentage Achieved</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>