force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Summit_Section__c.field-meta.xml
<CustomField>
    <fullName>smt_Summit_Section__c</fullName>
    <label>Summit Section</label>
    <referenceTo>smt_Summit_Section__c</referenceTo>
    <relationshipLabel>Summit Particulars</relationshipLabel>
    <relationshipName>Summit_Particulars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>