force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Target__c.field-meta.xml
<CustomField>
    <fullName>smt_Target__c</fullName>
    <label>Target</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>