force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Target_Text__c.field-meta.xml
<CustomField>
    <fullName>smt_Target_Text__c</fullName>
    <label>Target Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>