force-app/main/default/objects/smt_Summit_Particular__c/fields/smt_Timeline__c.field-meta.xml
<CustomField>
    <fullName>smt_Timeline__c</fullName>
    <label>Timeline</label>
    <type>Date</type>
</CustomField>